# preforge

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: html_to_pptx_final_improvements.md  html_to_pptx_guide.md  html_to_pptx_improvements.md  requirements.md
scripts/: convert_html_to_pptx.py  create_test_documents.py  debug_tables.py  html_to_pptx_examples.py  visualize_layout.py
src/preforge/: __init__.py
src/preforge/converters/: __init__.py  html_to_pdf.py  html_to_pptx.py  html_to_pptx_legacy.py  pptx_to_docx.py
src/preforge/converters/html_pptx/: __init__.py  config.py  converter.py  slide_factory.py  style_utils.py  table_builder.py
src/preforge/core/: __init__.py  document.py  extractor.py  parser.py
src/preforge/extractors/: __init__.py
src/preforge/parsers/: __init__.py  docx_parser.py  html_parser.py  pdf_parser.py  pptx_parser.py
tests/unit/: test_detailed_parsing.py  test_html_to_pptx_converter.py  test_parsers.py  test_pptx_to_docx_converter.py
